fixed some text overflow

--- a/src/components/card-book/card-book.scss
+++ b/src/components/card-book/card-book.scss
@@ -42,7 +42,11 @@
 
   &__number {
     font-size: 14px;
-
+    display: inline-block;
+    max-width: 50%;
+    overflow: hidden;
+    white-space: pre-line;
+    text-overflow: ellipsis;
     @media (max-width: $phone-width) {
       font-size: 12px;
     }
@@ -53,7 +57,6 @@
     display: inline-block;
     font-size: 24px;
     line-height: 30px;
-
     @media (max-width: $phone-width) {
       font-size: 20px;
       line-height: 15px;
@@ -76,6 +79,10 @@
     line-height: 18px;
     color: $text-color-brightness-50;
 
+    display: inline-block;
+    max-width: 50%;
+    white-space: pre-line;
+
     @media (max-width: $phone-width) {
       font-size: 12px;
       line-height: 15px;
@@ -86,7 +93,6 @@
     font-family: $font-family-primary;
     font-size: 14px;
     font-weight: $bold;
-
     @media (max-width: $phone-width) {
       font-size: 12px;
     }
@@ -114,6 +120,12 @@
       margin-bottom: 5px;
       line-height: 20px;
     }
+  }
+
+  &__price-for-one-day {
+    display: inline-block;
+    max-width: 160px;
+    white-space: pre-line;
   }
 
   &__calc-info {
@@ -151,6 +163,12 @@
     font-weight: $bold;
   }
 
+  &__calc-option {
+    display: inline-block;
+    max-width: 214px;
+    white-space: pre-line;
+  }
+
   &__dotted-line {
     margin-right: 5px;
     margin-left: 5px;
@@ -158,6 +176,14 @@
     width: 100%;
     max-width: 70%;
     border-bottom: 1px dotted $text-color-brightness-50;
+  }
+
+  &__total {
+    display: inline-block;
+    max-width: 150px;
+    overflow: hidden;
+    white-space: pre-line;
+    text-overflow: ellipsis;
   }
 
   &__total-price {
